--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -9,12 +9,75 @@
 }
 
 @book{fridrich,
- author = {Fridrich, Jessica},
- title = {Steganography in Digital Media: Principles, Algorithms, and Applications},
- year = {2009},
- isbn = {0521190193, 9780521190190},
- edition = {1st},
- publisher = {Cambridge University Press},
- address = {New York, NY, USA},
+    author = {Fridrich, Jessica},
+    title = {Steganography in Digital Media: Principles, Algorithms, and Applications},
+    year = {2009},
+    isbn = {0521190193, 9780521190190},
+    edition = {1st},
+    publisher = {Cambridge University Press},
+    address = {New York, NY, USA},
 } 
 
+@article{h264-std,
+    author = "International Telecommunication Union's Telecommunication Standardization Sector",
+    title = "H.264 (V9) Advanced video coding for generic audiovisual services (H.264 standard)",
+    year = "2014"
+}
+
+@misc{scott-fs,
+    author = {Williams, Scott},
+    title = "Steganographic file systems within video files",
+    year = "2015",
+    note = "University of Cambridge Part II Computer Science Tripos Project Dissertation"
+}
+
+@mastersthesis{bateman,
+    author = {Bateman, Philip},
+    title = "Image Steganography and Steganalysis",
+    school = "University of Surrey",
+    year = "2008",
+    url = "https://www.cise.ufl.edu/~makumar/proposalppt.pdf"
+}
+
+@misc{jpegdctcoding,
+    author = {Buchner, Herbert},
+    title = "Image and Video Watermarking",
+    year = "1998",
+    note = "Telecommunications Seminar WS",
+    url = "http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.301.1551&rep=rep1&type=pdf"
+}
+
+@article{f5, 
+    author = {Westfield, Andreas},
+    title = "F5 -- A Steganographic Algorithm",
+    journal = "4th International Workshop on Information Hiding",
+    year = "2001",
+    howpublished = "https://f5-steganography.googlecode.com/svn/tags/release-0.3/F5%20Steganography.pdf"
+}
+
+@inproceedings{xu2006steganography,
+    title={Steganography in compressed video stream},
+    author={Xu, Changyong and Ping, Xijian and Zhang, Tao},
+    booktitle={Innovative Computing, Information and Control, 2006. ICICIC'06. First International Conference on},
+    volume={1},
+    pages={269--272},
+    year={2006},
+    organization={IEEE}
+}
+
+@inproceedings{fang2006data,
+    title={Data hiding for digital video with phase of motion vector},
+    author={Fang, Ding-Yu and Chang, Long-Wen},
+    booktitle={Circuits and Systems, 2006. ISCAS 2006. Proceedings. 2006 IEEE International Symposium on},
+    pages={4--pp},
+    year={2006},
+    organization={IEEE}
+}
+
+@mastersthesis{steganosaurus,
+    author = {Ridgway, James},
+    title = "Video Steganography",
+    school = "University of Sheffield",
+    year = "2013",
+    howpublished = "http://steganosaur.us/about"
+}
