--- a/docs/dissertation/el398_dissertation.tex
+++ b/docs/dissertation/el398_dissertation.tex
@@ -119,11 +119,11 @@ by {\tt detex diss.tex | tr -cd '0-9A-Za-z $\tt\backslash$n' | wc -w}
 
 \section*{Original Aims of the Project}
 
-The aim of this project is to implement and evaluate existing steganographic methods  applied to motion vectors. To achieve this an end-user tool should be developed, which integrates with a video encoding library and offers several embedding algorithms. These algorithms are compared based on several criteria, such as embedding capacity, speed, and detectability. To assess the latter a collection of general-purpose steganalysis routines should be created.   
+The aim of this project is to implement and evaluate existing steganographic methods applied to motion vectors. To achieve this, an end-user tool should be developed to offer several steganographic methods. The algorithms will be evaluated based on criteria such as embedding capacity, speed, and detectability. A suite of steganalysis tools will be created.   
 
 \section*{Work Completed}
 
-Applications for embedding and extracting data from motion vectors were developed, featuring several popular LSB / image steganography algorithms. Matlab functions and scripts for steganalysis were created to extract and analyse motion vectors, offering classic and motion-vector-specific attacks against embedding schemes. Algorithms were compared against each other evaluating detectability, capacity and other aspects. Experiment on Human Subjects was performed to evaluate visual footprint of data embedding.
+Applications for embedding and extracting data from motion vectors were developed, featuring several popular LSB / image steganography algorithms. Matlab functions and scripts for steganalysis were created to extract and analyse motion vectors, offering classic and motion-vector-specific attacks against embedding schemes. Algorithms were compared against each other evaluating detectability, capacity and other aspects. Humans were used to evaluate detectability.
 
 \section*{Special Difficulties}
 
@@ -160,35 +160,35 @@ I, Edgaras Liberis of Homerton College, being a candidate for Part II of the Com
 
 % Introduction
 \chapterheader{1}{Introduction}
- 
-\emph{``Steganography''} is a compound word that comes from Greek \emph{``steganos''} (``covered, concealed, or protected''), and \emph{``graphein''} (``writing''). It is usually defined as an art of concealing information within seemingly innocent carrier data \cite[p. 3]{fridrich}. Steganographic methods are commonly used where communicating parties wish to hide the existence of messages between them, because that may attract unwanted attention. Such situations could be bypassing government censorship, avoiding law enforcement, and military intelligence, where the detection of the message may lead to revealing sender's location \cite{infohiding-survey}. 
+
+\emph{``Steganography''} is the art of concealing information within ostensibly innocent carrier data \cite[p. 3]{fridrich}, usually with the intention of creating a covert channel. Its applications include bypassing government censorship, avoiding law enforcement or military intelligence, and other situations in which detection of the communication may be harmful to the communicating parties (such as by revealing their location \cite{infohiding-survey}). 
  
 \section{Motivation}
 
-With the rise of the Information Age, modern steganography research has focused on exploring digital formats as containers for hidden data. Their appeal is due to redundancy in the structure of the data they encode, which often provides convenient opportunities to embed secret messages \cite[p. 2]{fridrich}. Another contributing factor is the increasing popularity of content-sharing websites, which made pictures, videos and audio recordings so widespread, that using them is unlikely to raise any suspicion. 
+In recent years, steganography research has explored the use of digital formats carrier data. Often, redundancy in data formats provides opportunity for concealing a payload \cite[p. 2]{fridrich}. Since multimedia formats have become some widespread online, their use is now unremarkable and unlikely to raise suspicion.
 
-A sensible approach to digital steganography is to hide data within regions of a file that are highly tolerant to small modifications or noise. In images, for example, we could hide information by changing a pixel's colour to a very similar one. We can generalise this approach to so-called \emph{least-significant-bit (LSB) embedding} \cite{bateman}: typically the least significant bit in a binary representation of a value corresponds to the highest granularity level so changing it should not introduce a perceivable change.
+A sensible approach to digital steganography is to hide data in regions of a file that are highly tolerant to small modifications or noise, such as by slightly changing the colour of a pixel in an image. Since the least significant bit in the binary representation of a value typically corresponds to the highest granularity level, changing it is less likely to be noticed---the key concept behind the so-called \emph{least-significant-bit (LSB) embedding} \cite{bateman}.
 
-Let's consider hiding information in a video file. To see whether video steganography could be feasible, let's do a high-level overview of a typical video file format. \texttt{MPEG} family -- a de facto industry and consumer standard -- encodes a video stream by encoding a sequence of frames that comprise it. However, encoding every single frame is redundant, because successive frames are often very similar (\emph{temporal correlation} property). Therefore some frames can be compactly represented as a set of changes from their predecessors. These changes are represented by how much a certain block has moved (\emph{motion vector (MV)}) and how pixels have changed (\emph{prediction error}) since the previous frame.  Frames encoded in full are called \emph{intra-frames} \cite{h264-std} (essentially a JPEG picture) and ones encoded as differences -- \emph{inter-frames} \cite{h264-std}. This gives us two avenues to explore: applying image steganography to intra-frames or using inter-frames' ``differences'' as a space for hidden data. Let's continue with the latter option, specifically considering embedding into MVs.
+\textbf{TODO} The \texttt{MPEG} video formats, a de facto standard, encode a video stream as a sequence of frames. Since encoding every frame independently would be redundant, the similarity of successive frames is exploited where possible to store frames as a set of changes from their predecessors. These changes are represented by how much a certain block of pixels has moved (\emph{motion vector, MV}) and how, in addition to this motion, the pixels have changed (\emph{prediction error}). Frames encoded independently are called \emph{intra-frames} \cite{h264-std} (essentially a JPEG image) and those encoded as differences called \emph{inter-frames} \cite{h264-std}. While both hold potential as carrier data, we will be looking only at embedding data into motion vectors.
 
 \textbf{PICTURE WILL BE GOOD HERE}
 
-The amount of data one can hide -- embedding capacity -- is an important aspect of a steganographic system. Given that videos are essentially sequences of frames with sound, we expect them to have the largest embedding capacity out of all media containers. Let's do a rough estimate: there are typically $\approx$20 inter-frames per second and 1000-5000 usable motion vectors available per frame\footnote{Depends on the selection criteria and the resolution of a video file.}. This results in embedding capacity of $\approx$20-100 Kbits/s, which indeed very favourably compares against embedding data into image or audio files.
+The amount of data one can hide using a steganographic system is called embedding capacity. Since videos are essentially sequences of frames with sound, we expect them to have the largest embedding capacity of all media containers. As there are typically $\approx$20 inter-frames per second and 1000-5000 usable motion vectors available per frame\footnote{Depending on the selection criteria and the resolution of a video file.}, we estimate an embedding capacity of $\approx$20-100 Kbits/s for MPEG videos.
 
-To be able to say how good a particular steganographic algorithm is, amongst other criteria, we need to evaluate whether the embedding it produces is detectable by an adversary. The counterpart field of study, which researches methods of detecting steganographic manipulations is called \emph{steganalysis}. Steganalysts use a multitude of domain-specific statistical attacks, such as plotting histograms, looking for correlations (or lack thereof) in the data, etc. to detect the presence of the hidden message. It is a cat and mouse game between the two fields, where new research is being published to break existing steganographic methods or the other way around -- to avoid detections.
+To evaluate a steganographic algorithm, we need to determine if its use is detectable by an adversary. The study of methods of detecting steganographic manipulations is called \emph{steganalysis}. Steganalysts use various domain-specific statistical attacks, such as plotting histograms, looking for correlations (or lack thereof) in the data, etc. to detect the hidden message.
 
-Given all of above we can identify a niche for a project. This project explores inter-frame video steganography, specifically embedding data into MVs. To achieve this, LSB embedding is employed by allowing to tweak the $x$ or $y$ components of a vector. An end-user tool was developed, offering several high-capacity data embedding algorithms and encryption with a user-provided password. These algorithms are later compared based on several criteria, such as embedding capacity, speed and detectability, where latter is evaluated using general-purpose statistical steganalytic methods, that were implemented in Matlab. 
+This project explores hiding data in the MVs of MPEG videos by applying LSB embedding to the $x$ or $y$ components of the vector. A tool was developed to offer several high-capacity data embedding algorithms and encryption with a user-provided password. These algorithms were evaluated based on, embedding capacity, speed, and detectability (using statistical steganalytic methods implemented in Matlab) 
 
 \section{Existing work}
 
-Traditionally, image steganography has received more research attention compared to video steganography, so early attempts tried to straightforwardly use existing image (JPEG) steganography techniques \cite{bateman, jpegdctcoding}.
+Traditionally, image steganography has received more research attention compared to video steganography, so early attempts tried to directly use existing image (JPEG) steganography techniques \cite{bateman, jpegdctcoding}.
 
-Bateman \cite{bateman} reviews the evolution of LSB-based embedding algorithms, starting with simple strategies, such as embedding data by changing the intensity level of every pixel. However, for data compression purposes images are often encoded using lossy JPEG, so these changes are lost after recompression. This can be mitigated by embedding data into something that JPEG stores directly in a compressed file, so later research focused on using DCT coefficients for this purpose\footnote{
-One of the main compression techniques that JPEG uses is \emph{Discrete Cosine Transform (DCT)}, which is similar to the Fourier Transform. A relatively small amount of coefficients is enough to reconstruct an image with sufficient quality. Those coefficients are not sensitive to small changes, which means they are suitable for data embedding.} \cite{jpegdctcoding}. Other approaches were improving on this by preserving various statistical properties that ``clean'' images would possess \cite{bateman, f5}. These will be introduced in more detail further on. Similarly to this project, Williams \cite{scott-fs} applies these image steganography techniques to videos, but by considering uncompressed videos as series of JPEG-encoded frames.
+Bateman \cite{bateman} reviews the evolution of LSB-based embedding algorithms. Simple strategies such as changing the intensity of every pixel are destroyed by the lossiness of JPEG compression when the image is recompressed. This can be mitigated by embedding data into something that JPEG stores directly in a compressed file, so later research focused on using the DCT coefficients for this purpose\footnote{
+One of the main compression techniques that JPEG uses is \emph{Discrete Cosine Transform (DCT)}, which is similar to the Fourier Transform. A relatively small number of coefficients is enough to reconstruct an image with sufficient quality. Those coefficients are insensitive to small changes, making they are suitable for data embedding.} \cite{jpegdctcoding}. Other approaches improve on this by preserving statistical properties that ``clean'' images would possess \cite{bateman, f5} (further discussed in \ref{emb-alg}). Similarly to this project, Williams \cite{scott-fs} applies these image steganography techniques to videos by considering uncompressed videos as series of JPEG-encoded frames.
 
-Other researchers took a different approach and explored inter-frame steganography using motion vectors. Xu \emph{et al.} \cite{xu2006steganography} used a phase of a MV ($\tan^{-1}(\frac{y}{x})$) to determine whether the $x$ or $y$ component will carry a single bit of data (approach in this paper is implemented and analysed later in this document). Non-LSB algorithms include an interesting approach by Fang \emph{et al.} \cite{fang2006data}, who proposed to find an alternative motion vector (with minimum prediction error), whose phase will be in a particular quadrant out of 4. This conveys 2 bits of information per MV.
+Other researchers explored inter-frame steganography using motion vectors. Xu \emph{et al.} \cite{xu2006steganography} used the phase of an MV ($\tan^{-1}(\frac{y}{x})$) to determine which of the $x$ or $y$ component will carry a single bit of payload data (we discuss this method more in \ref{xu-alg}). Non-LSB algorithms include an interesting approach by Fang \emph{et al.} \cite{fang2006data}, who proposed to find an alternative motion vector (with minimum prediction error), whose phase will be in a particular quadrant out of 4. This conveys 2 bits of information per MV.
 
-One of the main deliverables of this project is a usable end-user application for doing MV-based steganography, so I looked for competing applications in this area. While there are popular applications, such as MSU StegoVideo\footnote{\url{http://www.compression.ru/video/stego_video/index_en.html}} or OpenPuff\footnote{\url{http://embeddedsw.net/OpenPuff_Steganography_Home.html}}, they do not implement MV steganography, so evaluating them would inevitably lead to a discussion about the differences of theory behind them, as opposed to the quality and completeness of the implementation. The only application offering MV steganography that I was able to find is James Ridgway's \emph{Steganosaurus} \cite{steganosaurus}, but, unfortunately, I was not able to run it. The accompanying dissertation shined some light onto methods used, and it turned out that it only modifies the first (presumably the top left) motion vector of every frame, which severely limits the embedding capacity and increases chances of embedding being detected (location is known).   
+One of the main deliverables of this project is a simple tool for doing MV-based steganography. Popular existing stegongraphy tools, such as MSU StegoVideo\footnote{\url{http://www.compression.ru/video/stego_video/index_en.html}} or OpenPuff\footnote{\url{http://embeddedsw.net/OpenPuff_Steganography_Home.html}} do not implement MV steganography. so we will not discuss them further. The only implementation of MV steganography that I was able to find is James Ridgway's \emph{Steganosaurus} \cite{steganosaurus}, but its algorithm seems rather limited. It only modifies the first (presumably the top left) motion vector of every frame severely limiting embedding capacity and increasing the ease of detection (as the location of the modified MV is known).   
 
 Discuss steganalysis.
 
@@ -276,6 +276,7 @@ In general terms, don't tailor to MV case very much yet.
 SVMs are just the best.
 
 \section{Embedding algorithms}
+\label{emb-alg}
 
 \subsection{Hide and Seek}
 
@@ -301,7 +302,8 @@ Explain upsides of randomised embedding. Impl issues, mention ECC.
 
 Similarly avoids 0s and 1s as most detectable ones. Current attack is JPEG specific?
 
-\subsection{Cheng's Algorithm}
+\subsection{Xu's Algorithm}
+\label{xu-alg}
 
 Discuss how MVSteg should be implemented + design decisions.
 
